added image svg doesn't work

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "react": "^0.14.8",
     "react-native": "^0.25.1",
+    "react-native-icons": "^0.7.1",
+    "react-native-vector-icons": "^2.0.2",
     "reflux": "^0.4.1"
   }
 }
